--- a/make_my_trip/src/App.css
+++ b/make_my_trip/src/App.css
@@ -1,5 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+
+body{
+  font-family: 'Lato', sans-serif;
+}
+
 .App {
   text-align: center;
+
 }
 
 .App-logo {
