--- a/make_my_trip/src/Components/TravelAddOn/Contact.module.css
+++ b/make_my_trip/src/Components/TravelAddOn/Contact.module.css
@@ -1,7 +1,7 @@
 .TripDiv{
   
         display: flex;
-     
+     background: white;
       min-height: 40px;
       padding: 0px 27px;
       -webkit-box-pack: justify;
