--- a/make_my_trip/src/Components/ExploreSearch/ExploreSearch.css
+++ b/make_my_trip/src/Components/ExploreSearch/ExploreSearch.css
@@ -1,18 +1,37 @@
 .explore-search {
   display: flex;
+  padding: 10px;
+
 }
 
 .explore-s-1 {
   /* background: #fff; */
   display: flex;
+  padding: 0 15px;
 }
 
 .explore-s-2 {
   /* background: #fff; */
   display: flex;
+  padding: 0 15px;
 }
 
 .explore-s-3 {
   /* background: #fff; */
   display: flex;
+  padding: 0 15px;
+}
+.explore-s-4 {
+  /* background: #fff; */
+  display: flex;
+  padding: 0 15px;
+}
+.explore-s-5 {
+  /* background: #fff; */
+  display: flex;
+  padding: 0 15px;
+}
+
+.spacefor {
+  margin: "0 10px 0 10px";
 }
